alignment issue fix

--- a/student-frontend/src/index.css
+++ b/student-frontend/src/index.css
@@ -73,7 +73,7 @@ button:focus-visible {
 }
 
 body {
-  padding: 5em;
+  padding-top: 2em;
 }
 
 
